--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+  <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="La Lista - Aplicación para hacer listas de regalos">
+    <meta name="author" content="la-lista">
+    <meta name="keyword" content="listas de regalos, babyshower, shower de apartamento, listas de novios ">
   <title>La Lista</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application"%>
@@ -9,13 +15,9 @@
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
-      <li><%= link_to "Inicio", root_path %></li>
-      <% if current_user %>
-        <li class="pull-left">
-          <%= link_to "Fiestas", fiestas_path %>
-        </li>
-        
-        <% end %>
+      <li><%= link_to root_path do %><i class="fa fa-gift"></i> La Lista<% end %></li>
+      <div class="pull-left user-info"><small>controla tus listas de regalos</small></div>
+
       <div class="pull-right user-info">
        <% if current_user %>
          Hola <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>! <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %>
