Arreglar correo para usuarios existentes

--- a/app/views/convidado_mailer/usuario_existente_convidado.html.erb
+++ b/app/views/convidado_mailer/usuario_existente_convidado.html.erb
@@ -8,7 +8,7 @@
     <p>Queremos hacerte participe de la celebración del <strong><%= @convidado.fiesta.nombre.humanize.titleize%></strong>.</p>
 
     <p>
-      Para ver los detalles de la fiesta, solo debes seguir este link: <%= link_to "Fiesta", fiesta_url(@convidado.fiesta) %>.
+      Para ver los detalles de la fiesta <%= link_to "Accede al portal", ingresar_path %>.
     </p>
 
     <p>Te esperamos y que tengas un buen día!</p>
