--- a/app/views/regalos/edit.html.erb
+++ b/app/views/regalos/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Regalos#edit</h1>
-<p>Find me in app/views/regalos/edit.html.erb</p>
+<h1>Editar regalo</h1>
+<%= render partial: "form", locals: {fiesta: @fiesta, lista: @lista, regalo: @regalo} %>
