--- a/app/views/convidado_mailer/usuario_existente_convidado.html.erb
+++ b/app/views/convidado_mailer/usuario_existente_convidado.html.erb
@@ -4,11 +4,11 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h3>Has recibido una invitación de parte de <%= User.find(@convidado.anfitrion_id).name.to_s.humanize.titleize %></h3>
+    <h3>Tienes una invitación de parte de <%= User.find(@convidado.anfitrion_id).name.to_s.humanize.titleize %></h3>
     <p>Queremos hacerte participe de la celebración del <strong><%= @convidado.fiesta.nombre.humanize.titleize%></strong>.</p>
 
     <p>
-      Para ver los detalles de la fiesta <%= link_to "Accede al portal", ingresar_path %>.
+      Para ver los detalles de la fiesta <%= link_to "Accede al portal", ingresar_url %>.
     </p>
 
     <p>Te esperamos y que tengas un buen día!</p>
