--- a/app/views/fiestas/edit.html.erb
+++ b/app/views/fiestas/edit.html.erb
@@ -1,15 +1,7 @@
 <h1>Editar fiesta </h1>
 <div class="row">
   <div class="col-md-6">
-    <span class="help-block">Personaliza tu mensaje</span>
+    <span class="help-block">Personaliza los detalles de la fiesta</span>
     <%= render partial: "form", locals: {fiesta: @fiesta} %>
-  </div>
-  <div class="col-md-6">
-  <span class="help-block">Convida a tus amigos</span>
-  <%= form_for @convidado, :url => fiesta_convidados_path(@fiesta) do |f| %>
-      <%= f.label :email %>
-      <%= f.email_field :email %>
-      <%= f.submit 'Enviar' %>
-  <% end %>
   </div>
 </div>
