--- a/app/views/regalos/show.html.erb
+++ b/app/views/regalos/show.html.erb
@@ -1,4 +1,13 @@
-<h1><%= @regalo.titulo %></h1>
-<p><%= image_tag(@regalo.imagen.url) if @regalo.imagen? %></p>
-<p><%= link_to 'más info', @regalo.url if @regalo.url? %> </p>
-<%= link_to "Volver a los regalos de la lista", fiesta_lista_path(@fiesta, @lista) %>
+<ol class="breadcrumb">
+  <li>Fiestas / <%= link_to @fiesta.nombre, @fiesta %> / <%= link_to @lista.nombre, [@fiesta, @lista] %> / regalos / <%= @regalo.titulo %>
+  </li>
+</ol>
+  <div><%= image_tag(@regalo.imagen.normal.url) if @regalo.imagen? %>
+  </div>
+  <div>
+    <span>Dónde lo puedes conseguir?</span>
+    <p><%= @regalo.donde_lo_consigues.humanize if @regalo.donde_lo_consigues %></p>
+    <p><%= link_to 'más info', @regalo.url if @regalo.url? %> </p>
+  </div>
+
+<%= link_to "<< Volver a lista", fiesta_lista_path(@fiesta, @lista) , class: "btn btn-primary btn-xs"%>
