Cambiar vista de inicio

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -1,13 +1,16 @@
 <div class="jumbotron">
 <h1>La Lista</h1>
 <p>Una herramienta para gestionar listas de regalos para fiestas de toda clase</p>
-
+<h3>Busca la lista a la que fuieste invitado y se el primero en reservar el regalo. </h3>
 <%= link_to "Regístrate hoy!", registrarse_path, class: "btn btn-lg btn-info"%>
 
 </div>
-<h3>Busca los productos que vas a comprar y reserva los que vas a regalar</h3>
+<br>
+<div class="">
 
-<div class="row">
+<i>Antes de que naciera mi hija, construí esta aplicación para hacerles fácil la vida a los anfitriones de las viestas porque las alternativas para hacer listas de regalos son a veces muy complejas.</i>
+</div>
+<!-- <div class="row">
   <div class="col-md-4">
     <h2>Regístrate con nosotros</h2>
     <p>La Lista te permite registrarte fácilmente con tu cuenta de correo o con tu cuenta en facebook. Como usuario podrás crear tus propias fiestas con listas de regalos e invitar a todos tus familiares o amigos, o recibir invitaciones a fiestas de tus amigos.</p>
@@ -21,3 +24,4 @@
     <p>La Lista te brinda la información ampliada de la fiesta, de los invitados y de los regalos que espera el anfitrión. Lo mejor de todo es que tu puedes comprar los regalos de tu preferencia en el lugar que prefieras. Tu decides cuánto presupuesto asignar y cuando ya lo tengas en tu poder debes notificar que has comprado el producto para que el anfitrión sepa qué regalos quedan disponibles.</p>
   </div>
 </div>
+ -->
