Cambiar vista de listas a columnas

--- a/app/views/fiestas/show.html.erb
+++ b/app/views/fiestas/show.html.erb
@@ -17,7 +17,7 @@
        
         <p>Dónde: <strong><%= @fiesta.lugar %></strong></p>
       
-        <p>Cuando: <strong><%= @fiesta.fecha_y_hora_inicio %></strong> a <strong><%= @fiesta.fecha_y_hora_cierre %></strong></p>
+        <p>Cuando: <strong><time><%= @fiesta.fecha_y_hora_inicio %></time></strong> a <strong><time><%= @fiesta.fecha_y_hora_cierre %></time></strong></p>
       </div> 
     </div>
   </div>
