--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -1,55 +1,25 @@
  <% unless regalo.compromiso.nil? %>
-  <div class="regalo-<%= regalo.id %>">
-    <a href="" class="btn btn-default btn-modal" data-selector="<%= "modal-regalo-#{regalo.id}" %>"><div class="col-sm-12">
-    <span>
-      <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
-    </span> 
-    <span>
-      <%= regalo.titulo.to_s.humanize.titleize%>
-    </span> 
-    <span></span>
-    </div></a>
-    <div class="controles">
-    <% case regalo.compromiso.value %>
-    <% when "disponible" %>
-    <span>
-      <%= link_to "lo quiero reservar", fiesta_lista_regalo_reservar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info btn-xs", data: {toggle: "tooltip", placement: "top"}, title: "Resérvalo antes de que sea demasiado tarde." %>
-    </span>
-    <% if policy(regalo).destroy? %>
-    <span>
-      <%= link_to "eliminar de la lista", fiesta_lista_regalo_compromiso_path(regalo.lista.fiesta, regalo.lista, regalo, regalo.compromiso), method: :delete, class: "btn btn-danger btn-xs" %>
-    </span>
-    <% end %>
-    <% when "reservado" %>
-    <% if current_user.id == regalo.compromiso.user_id ||policy(regalo).edit? %>
-    <span>
-      <%= link_to "liberarlo", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-success btn-xs", data: {toggle: "tooltip", placement: "top"}, title: "Volverá a la lista de regalos disponibles" %>
-    </span>
-    <span>
-      <%= link_to "lo he comprado", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info btn-xs", data: {toggle: "tooltip", placement: "top"}, title: "Notifica al anfitrión de tu compra" %>
-    </span>
-    <% else %>
-    <span>
-      <%= link_to "regalo reservado", "", class: "btn btn-default btn-xs disabled" %>
-    </span>
-    <% end %>
-    <% when "comprado" %>
-    <% if policy(regalo).edit? %>
-      <span>
-      <%= link_to "liberar", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-xs" %>
-      </span>
-      <% end %>
-      <span>
-      <%= link_to "regalo comprado", "", class: "btn btn-success btn-xs disabled" %>
-    </span>
-    <% end %>
+  <div class="regalo regalo-<%= regalo.id %>">
+    <div class="regalo-body">
+      <div>
+        <a href="" class="btn btn-default btn-modal col-sm-12" data-selector="<%= "modal-regalo-#{regalo.id}" %>">
+        <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
+        </a>
+        <p class="col-sm-12">
+        <small><%= regalo.titulo.to_s.humanize.titleize %></small>
+        </p>
+      </div> 
+      
+    </div>
+    <div class="controles text-center">
+      <%= render partial: "regalos/controles", locals: {regalo: regalo} %>
     </div><!-- /controles-->
   </div><!-- /regalo-->
   <!-- /controles-->
   <% else %>
   <% if policy(regalo).edit? %>
-  <div class="regalo-<%= regalo.id %>">
-    <a href="" class="btn btn-default btn-modal" data-selector="<%= "modal-regalo-#{regalo.id}" %>"><div class="col-sm-12">
+  <div class="regalo regalo-<%= regalo.id %>">
+    <a href="" class="btn btn-default btn-modal col-sm-12" data-selector="<%= "modal-regalo-#{regalo.id}" %>"><div class="col-sm-12">
     <span>
       <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
     </span> 
@@ -71,7 +41,6 @@
   </div>
   <% end %>
 <% end %>
-<hr>
 <!-- modal begins -->
 <%= content_tag :div, class: 'modal fade', id: "modal-regalo-#{regalo.id}",role: "dialog"  do %>
     <div class="modal-dialog">
