--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -2,15 +2,15 @@
   <div class="regalo regalo-<%= regalo.id %>">
     <div class="regalo-body">
         <div class="row">
-          <div class="col-lg-4 col-md-3 col-sm-4 col-xs-3 pull-left">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-3 pull-left">
             <a href="" class="btn btn-default btn-modal" data-selector="<%= "modal-regalo-#{regalo.id}" %>">
             <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
             </a>
           </div>
-          <div class="col-lg-8 col-md-7 col-sm-8 col-xs-8 pull-left">
+          <div class="col-lg-8 col-md-8 col-sm-8 col-xs-9 pull-left">
             <div>
              <p>
-              <small><%= regalo.titulo.to_s.humanize.titleize %></small>
+              <small><strong><%= regalo.titulo.to_s.humanize.titleize %></strong></small>
             </p>
             </div>
             <div class="controles">
@@ -49,10 +49,10 @@
             <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
             </a>
           </div>
-          <div class="col-lg-8 col-md-7 col-sm-8 col-xs-8 pull-left">
+          <div class="col-lg-8 col-md-7 col-sm-8 col-xs-9 pull-left">
             <div>
              <p>
-              <small><%= regalo.titulo.to_s.humanize.titleize %></small>
+              <small><strong><%= regalo.titulo.to_s.humanize.titleize %></strong></small>
             </p>
             </div>
             <div class="controles">
