cambiar texto inicio y ajustes de diseño

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -1,14 +1,14 @@
 <div class="jumbotron">
 <h1>La Lista</h1>
-<p>Una herramienta para gestionar listas de regalos para fiestas de toda clase</p>
-<h3>Busca la lista a la que fuieste invitado y se el primero en reservar el regalo. </h3>
+<p>Una herramienta para gestionar listas de regalos</p>
+<h3>Busca la lista a la que fuiste invitado y se el primero en reservar el regalo. </h3>
 <%= link_to "Regístrate hoy!", registrarse_path, class: "btn btn-lg btn-info"%>
 
 </div>
 <br>
 <div class="">
 
-<i>Antes de que naciera mi hija, construí esta aplicación para hacerles fácil la vida a los anfitriones de las viestas porque las alternativas para hacer listas de regalos son a veces muy complejas.</i>
+<q>Cuando iba a nacer mi hija, construí esta sencilla aplicación para su baby shower. Ojalá logre hacerle la vida más fácil a quienes quieran organizar una lista de regalos. No tiene costo y si la necesitas para tu fiesta genial úsala!</q>
 </div>
 <!-- <div class="row">
   <div class="col-md-4">
