--- a/app/views/fiestas/show.html.erb
+++ b/app/views/fiestas/show.html.erb
@@ -22,22 +22,23 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-3">
+    <div class="col-xs-6">
       <div class="listas">
         <% if @fiesta.listas.empty? %>
         <% if policy(@fiesta).update? %>
-        <span><%= link_to "Crear lista de regalos", new_fiesta_lista_path(@fiesta), class: "btn btn-primary btn-lg pull-left" %></span>
+        <span><%= link_to "Crear lista de regalos", new_fiesta_lista_path(@fiesta), class: "btn btn-primary btn-lg" %></span>
         <% else %>
         <span>No hay listas de regalos disponibles aún. </span>
         <% end %>
         <% else %>
-        <span><%= link_to "ver lista de regalos", fiesta_lista_path(@fiesta, @lista), class: "btn btn-lg btn-primary pull-left" %></span>
+        <span><%= link_to "ver lista de regalos", fiesta_lista_path(@fiesta, @lista), class: "btn btn-lg btn-success" %></span>
         <% end %>
       </div>
     </div>
-    <div class="col-sm-3">
+
+    <div class="col-xs-6">
       <div class="invitados">
-        <span><%= link_to "ver lista de invitados", fiesta_convidados_path(@fiesta) , class: "btn btn-lg btn-primary pull-right"%></span>
+        <span><%= link_to "ver lista de invitados", fiesta_convidados_path(@fiesta) , class: "btn btn-lg btn-success"%></span>
       </div>
     </div>
   </div>
